--- a/mpaper/example.tex
+++ b/mpaper/example.tex
@@ -285,8 +285,108 @@ These cases are defined for the start of a piece, but the ending constraints are
 
 Since these pieces are small, each of these computations is small and relatively simple to perform. For each piece, this then produces a weighted directed bipartite graph $G_P$, with vertex set $\{RW_{start}, BW_{start}, R_{start}, B_{start}, \\ RW_{end}, BW_{end}, R_{end}, B_{end}\}$, such that an edge exists from $X_{start}$ to $Y_{end}$ if there exists a colouring of piece $P$ with starting constraint $X$ and ending constraint $P$, with weight equal to the number of clusters originating in $P$.
 
-Once all of these bipartite graphs are computed, the ending vertices of each piece can be merged with the starting vertices of the next piece, along with adding in a common source and sink vertex, removing every case bar case \emph{BW} from the first piece, and finally removing all unreachable vertices, generating a directed acyclic multipartite graph $G$. Then, the maximum number of red clusters on the reduced caterpillar graph is equal to the length of the longest path in $G$.
+Once all of these bipartite graphs are computed, the ending vertices of each piece can be merged with the starting vertices of the next piece, along with adding in a common source and sink vertex, removing every case bar case \emph{BW} from the first piece, generating a directed acyclic multipartite graph $G$. Then, the maximum number of red clusters on the reduced caterpillar graph is equal to the length of the longest path in $G$.
 
+Assuming that the bipartite graphs for each possible piece are pre-computed beforehand, producing the directed acyclic graph $G$ takes $O(p)$ time where $p$ is the number of pieces to combine, since each piece requires combining two constant sets of vertices together, along with constant time operations to add source and sink vertices. Since each piece adds at most $4$ additional vertices to $G$, and at most $16$ additional edges, the number of vertices and edges in $G$ are both $O(p)$. And finding the longest path in a directed acyclic graph with $V$ vertices and $E$ edges takes $O(V+E)$ time, this algorithm takes $O(p)$ time overall. But since each piece is of length at most 3, the number of pieces is linear in the length of the caterpillar, so this algorithm takes $O(n)$ time, being linear in the length of the reduced caterpillar string.
+
+
+In order to justify the correctness of this method, namely that it provides the exact maximum number of red clusters attainable on $G$, we must first justifying colouring each piece in sequence.
+
+\begin{lemma}
+\label{lem/sequential-optimal}
+For a (not necessarily reduced) caterpillar graph $G$ split into a series of pieces of length at most 3 as in the previous algorithm, say $P_1, \dots, P_n$, the optimal colouring in terms of maximising red clusters is attained by colouring $P_1$, then $P_2$, and so on up to $P_n$.
+\end{lemma}
+\begin{proof}
+This proof proceeds by induction on the number of pieces in $G$.
+
+ If $G$ has just one piece, then clearly colouring this piece will attain the optimal colouring, so the base case trivially holds.
+
+ Now suppose the lemma holds for a (not necessarily reduced) caterpillar graph consisting of at most $n-1$ pieces. Then $G$, a caterpillar graph with $n$ pieces, is made up of the concatenation of two caterpillar graphs - one graph with $n-1$ pieces followed by one piece.
+
+If either end piece is fully coloured first, the lemma holds from the inductive hypothesis. If a different piece is fully covered first, then $G$ is split into two smaller graphs, each with length less than $n-1$ pieces. If an optimal colouring for one of these graphs is attained using the inductive hypothesis, then the colouring will spread to the other piece, so it is not possible to colour each of these pieces sequentially - and hence, this colouring cannot be better than the optimal colouring, so the lemma holds in this case.
+
+Now suppose the first piece coloured is not fully covered, so another piece starts being coloured before the first piece is finished. Then the possible colourings on this first piece are a subset of all possible colourings, so the number of red clusters on this first piece cannot be any better than optimal. Then applying the inductive hypothesis to the remaining pieces means that the result holds.
+
+\end{proof}
+
+Note that this lemma holds for caterpillar graphs even if they are not fully reduced - in particular, their strings need not start or end in a $0$. This allows induction to be applied, since concatenating non-reduced caterpillar graphs can still lead to a reduced caterpillar graph.
+
+The algorithm being exact follows from this lemma, since the multipartite graph constructed during the algorithm describes all possible ways to colour the caterpillar graph sequentially, and since the longest path is chosen the most optimal way to colour the whole graph is chosen, even if this means deviating from the greedy approach.
+
+\subsection{Graph diameter in adversarial graph burning}
+
+A key heuristic when counting the maximal number of monochromatic components for a particular graph $G$ is the \emph{diameter} of $G$:
+
+\begin{definition}
+\label{def/diameter}
+  Given a graph $G$ with vertex set $V(G)$, the \emph{diameter} of $G$ is given by
+  
+  \begin{align*}
+  D(G) = \max_{u \in V(G), v \in V(G)} d(u,v)
+  \end{align*}
+
+  where $d(u,v)$ is the length of the shortest path between $u$ and $v$, and if no such path exists we say that $d(u,v) = \infty$.
+\end{definition}
+
+In the context of adversarial graph burning, this means that any instance of adversarial graph burning on $G$ will terminate within $D(G)$ rounds, when $G$ is connected. The following example suggests that graphs with low diameter tend to admit fewer clusters than high diameter graphs:
+
+\begin{lemma}
+\label{lem/cycle-clusters}
+  Let $G$ be a cycle on $n$ vertices. Then the maximum number of red clusters on $G$ is $\lceil \frac{n}{4} \rceil$, and this bound is tight.
+\end{lemma}
+
+\begin{proof}
+  Firstly, labelling the vertices of $G$ as $v_1, \dots, v_n$ in order, keeping in mind that $v_1$ is adjacent to $v_n$, the burning sequence $(v_1, v_n), (v_{n-2}, v_3), (v_5, v_{n-4}), \dots$ attains $\lceil \frac{n}{4} \rceil$ red clusters, since at each round except possibly the last, $4$ vertices are burned and $1$ new red cluster is started.
+
+  Secondly, since every vertex has degree $2$, at least $4$ vertices must be burned every round, with the proof of this following a very similar structure to Corollary \ref{cor/path-clusters}. And since at most $1$ cluster can be created per round, the maximum number of red clusters on $G$ is at most $\lceil \frac{n}{4} \rceil$.
+\end{proof}
+
+In conjunction with Corollary \ref{cor/path-clusters}, the previous lemma presents a surprising fact: Since the maximum number of clusters on a path is $\lceil \frac{n}{3} \rceil$, and $\lceil \frac{n}{4}\rceil$ on a cycle, adding a single edge can reduce the maximum possible number of clusters on a graph by an arbitrary amount. This suggests that the diameter of a graph is important.
+
+\subsection*{Counting monochromatic components in trees}
+
+Compared to our previous work on paths and caterpillar trees, trees present some unique challenges when counting monochromatic components. In particular, our strategies for colouring paths and caterpillar trees generally rely on being able to limit the spread of vertices, and proceed through the graph in a clear sequence. However, in general trees do not possess a convenient start or end point, so such a sequence is not so clear to find. As a result, rather than the exact results in previous sections, we focus on approximate results for trees, improving on our existing upper bounds. Our first result uses that all trees contain caterpillar graphs:
+
+\begin{definition}
+  \label{def/maximal-caterpillar}
+  Given a tree $T$, the \emph{maximal caterpillar of $T$}, denoted $C_T$, is the subgraph induced by all vertices in the longest path in $T$, along with all vertices which are distance $1$ from said path. If there are multiple longest paths in $T$, the maximal caterpillar of $T$ is induced by the path such that the number of vertices in the caterpillar is maximised.
+\end{definition}
+
+Once this caterpillar has been obtained, this can be coloured to attain a bound on red clusters for $T$:
+
+\begin{corollary}
+  \label{def/tree-caterpillar}
+  Given a tree $T$, the maximum number of red clusters on $T$ is at least as many as the maximum number of red clusters on $C_T$.
+\end{corollary}
+
+\begin{proof}
+  Consider the colouring on $C_T$ generated by our previous procedure - we claim this colouring can also be applied when $C_T$ is a subgraph of $T$. Every vertex in $T \setminus C_T$ is adjacent to at most one vertex in $C_T$, since being adjacent to more than one vertex would result in a cycle. Therefore, these vertices are only coloured when their adjacent vertex in $C_T$ is already coloured, so the colouring of $C_T$ is unaffected by these vertices.
+\end{proof}
+
+A natural suggestion is that the tightness of this bound depends on how many vertices of $T$ are included in the maximal caterpillar, which is discussed further in the following lemma:
+
+\begin{lemma}
+  \label{lem/ratio-tends-to-zero}
+  For any tree $T$, denote the \emph{caterpillar ratio of $T$} as the number of vertices in $M_T$ divided by the number of vertices in $T$. This ratio can be arbitrarily close to zero.
+\end{lemma}
+
+\begin{proof}
+Let $B_h$ be the perfect binary tree with height $h$. Then the longest path on $B_h$ is obtained by travelling between a leaf node in the left subtree of the root and a leaf node in the right subtree of the root, and this path has length $2h+1$. This path has $2(h-1)$ internal nodes, and each internal node has 2 children, with one child being included in the longest path and the other child being included in the maximum caterpillar, so the number of vertices in $M_{B_h}$ is equal to $4h-1$.
+
+However, the number of vertices in $B_h$ is $2^{h+1}-1$, so the caterpillar ratio of $B_h$ is $\frac{4h-1}{2^{h+1}-1}$, which tends to $0$ as $h$ tends to $\infty$.
+\end{proof}
+
+%idea: find the longest path in the tree, take all vertices that are distance 1 away to find a caterpillar, consider remaining vertices
+
+This shows that, while colouring the maximal caterpillar gives a lower bound on the maximum number of red clusters in a tree $T$, an arbitrarily large proportion of the graph is not contained within the maximal caterpillar. Hence, colouring the remainder of $T \setminus C_T$ will be key to obtaining a tighter lower bound on the maximum number of red clusters in $T$.
+
+We first remark that $T \setminus C_T$ must be disconnected, since otherwise $T$ would contain a cycle. In particular, $T \setminus C_T$ is comprised of a set of connected components that are all trees, so an effective approach for colouring trees could be applied recursively by generating successively smaller caterpillars. This suggests one idea for an initial approach:
+
+\begin{enumerate}
+  \item Find the maximal caterpillar in $T$, $C_T$, and colour $C_T$ using our previous procedure.
+  \item After this is completed, consider the subgraph of $T$ induced by white vertices, say $F$, which is a forest.
+  \item Colour the tree in $F$ with greatest diameter, and repeat until the entire graph is coloured.
+\end{enumerate}
 
 {\bf Acknowledgments.}
 Firstly, I would like to thank my supervisors - Jessica Enright, William Pettersson and John Sylvester - for their continual guidance and support throughout the project. I would also like to thank my parents, for always caring for me, and supporting my goals when I thought they could never be attained. And, last but not least, I would like to thank my girlfriend Jodie, for her never-ending love and kindness.
